--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,308 +1,221 @@
-/* ---------------------------------------------- */
-/* Fonts and Imports
-/* ---------------------------------------------- */
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,500,700,800);
-@import url(http://fonts.googleapis.com/css?family=Lobster);
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-/* ---------------------------------------------- */
-/* General Styles
-/* ---------------------------------------------- */
-body {
-    font: 300 14px/1.8 'Raleway', sans-serif;
-    color: #666;
-    overflow-x: hidden;
-}
+	<title>Tapas K. Das Ph.D.</title>
 
-img {
-    width: 242px;
-    height: 331px;
-    float: left;
-    margin: 10px 80px 10px 20px;
-    border-radius: 0%;
-}
+	<!-- CSS -->
+	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="assets/css/font-awesome.min.css" rel="stylesheet" media="screen">
+	<link href="assets/css/simple-line-icons.css" rel="stylesheet" media="screen">
+	<link href="assets/css/animate.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+    
+	<!-- Custom styles CSS -->
+	<link href="assets/css/style.css" rel="stylesheet" media="screen">
+    
+    <script src="assets/js/modernizr.custom.js"></script>
+       
+</head>
 
-/* Typography */
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Raleway', sans-serif;
-    text-transform: uppercase;
-    margin: 5px 0;
-}
 
-h1 {
-    font-size: 50px;
-    color: #fff;
-    font-weight: 700;
-}
+<body>
+	
 
-h2 {
-    font-size: 30px;
-    color: #333;
-    margin-bottom: 25px;
-}
 
-h3, h4, h5, h6 {
-    font-size: 13px;
-    letter-spacing: 1px;
-}
+	<!-- Preloader -->
 
-h5, h6 {
-    font-weight: 400;
-}
+	<div id="preloader">
+		<div id="status"></div>
+	</div>
 
-p {
-    margin-bottom: 10px;
-    line-height: 1.5;
-    text-align: justify;
-}
+	<!-- Home start -->
 
-article {
-    margin: 20px 30% 20px 20px;
-}
+	<section id="home" class="pfblock-image screen-height">
+        <div class="home-overlay"></div>
+		<div class="intro"> 
+			<h1> </h1>
+			<div class="start"></div>
+		</div>
 
-/* ---------------------------------------------- */
-/* Buttons
-/* ---------------------------------------------- */
-.btn {
-    font-family: 'Raleway', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 13px;
-    padding: 8px 26px;
-    border: 0;
-}
+        
 
-.btn-lg {
-    padding: 10px 25px;
-    background: rgba(17, 17, 17, 0.8);
-    color: #fff;
-}
+	</section>
 
-.btn-lg:hover {
-    background: rgba(17, 17, 17, 1.8);
-}
+	
 
-.btn-sm {
-    padding: 6px 25px;
-    font-size: 11px;
-}
+	<!-- Home end -->
 
-.btn-xs {
-    padding: 5px 25px;
-    font-size: 10px;
-}
+	<!-- Navigation start -->
+    <header class="header">
 
-/* ---------------------------------------------- */
-/* Forms and Inputs
-/* ---------------------------------------------- */
-.form-control, .input-group-addon {
-    border-radius: 3px;
-    background: #FFF;
-    border: 1px solid #D8E1E4;
-    font-size: 12px;
-    padding: 0 15px;
-}
+        <nav class="navbar navbar-custom" role="navigation">
 
-.form-control:focus {
-    border-color: rgba(135, 135, 135, 0.7);
-}
+            <div class="container">
 
-.input-group-addon {
-    background: #D8E1E4;
-    padding: 6px 15px;
-    font-weight: 700;
-}
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#custom-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    
+                </div>
 
-/* ---------------------------------------------- */
-/* Home Section
-/* ---------------------------------------------- */
-#home {
-    background: url(../images/usf4.jpg) no-repeat center center;
-    background-size: cover;
-    max-height: 200px;
-}
+                <div class="collapse navbar-collapse" id="custom-collapse">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="#home1"><Strong>Tapas K. Das</strong></a></li>
+					</ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#home1">Home</a></li>
+                        <li><a href="research/index.html">Research</a></li>
+                        <li><a href="teaching/index.html">Teaching</a></li>
+                        <li><a href="projects/index.html">Projects</a></li>
+                        <li><a href="students/index.html">Students</a></li>
+                        <li><a href="publications/index.html">Publications</a></li>
+                        <li><a href="awards/index.html">Awards</a></li>
+                        <li><a href="contact/index.html">Contact</a></li>
+                    </ul>
+                </div>
 
-.intro {
-    position: absolute;
-    width: 100%;
-    top: 25%;
-    text-align: center;
-    transform: translateY(-50%);
-    padding: 0 15px;
-}
+            </div><!-- .container -->
 
-.intro h1 {
-    font-size: 40px;
-    letter-spacing: 5px;
-    color: #fff;
-}
+        </nav>
 
-.start {
-    font-size: 16px;
-    color: #fff;
-    margin: 15px 0;
-}
+    </header>
 
-/* ---------------------------------------------- */
-/* Navigation
-/* ---------------------------------------------- */
-.header {
-    border-bottom: 0px solid #f5f5f5;
-    width: 100%;
-    z-index: 998;
-}
+    <!-- Navigation end -->
 
-.navbar-custom {
-    background: #fff;
-    text-transform: uppercase;
-    font-family: 'Raleway', sans-serif;
-}
+    <!-- Services start -->
+<section id="home1" class="pfblock pfblock-gray">
 
-.navbar-custom .navbar-brand,
-.navbar-custom .navbar-nav > li > a {
-    font-size: 11px;
-    letter-spacing: 3px;
-    color: #222;
-}
+	<div class="container">
+       <section class="main row">
+            <article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            </br>
+    			<img src="assets/images/das.jpg">	
+            <h2><strong> Core Administrative and Academic Interests </strong></h2>
+              <p> My administrative interest in higher education is focused on enhancing student success at both undergraduate and graduate levels and supporting professional excellence and growth of faculty and staff. I believe that we must create opportunities for our students that not only provide them with a strong foundation of knowledge in the theory and practice of their chosen fields, but also prepare them for engagement and leadership in both local and global communities. I am a strong proponent of ‘faculty portfolio of excellence’ comprising teaching innovations, basic and applied research supporting technology innovations and governmental policy needs, scholarly activities, student mentoring, and professional and community engagement. University staff members in all areas ranging from admissions and financial aid to parking and building services contribute significantly to student and faculty success as well as in cultivating future engaged alumni. Hence, developing a high quality and dedicated pool of professional and support staff is among the essential responsibilities of the college/university leadership.</p>
+              <p>My teaching and research interests include applied stochastic optimization modeling of decision support problems involving single and multiple (non-cooperative) players in a variety of interdisciplinary fields. My current research is focused on 1) examining design and policy issues for smart electricity grids supporting green generation, electric vehicles, and smart consumers in smart & connected communities, and 2) developing strategies for impact mitigation of large-scale influenza pandemic outbreaks. I am also involved in developing decision making tools for better disease diagnosis and treatment planning with applications in cancer care in collaboration with the School of Medicine and the Moffitt Cancer Center and Research Institute at USF. I recently served as the principal investigator for a NSF funded GK-12 project aimed at infusing engineering and science in elementary (K-5) curriculum. My electricity market design and policy analysis work was partially funded by grants from NSF and the Florida Energy Systems Consortium. I currently serve as the major professor for four (4) doctoral students. </p>
+              <p>I take significant interest professional leadership. I recently served as the Chair of the Council of Industrial Engineering Academic Department Heads (CIEADH), a governing body of the industrial and systems engineering departments across the U.S., Asia, and Latin America. I have completed a two-year term as the Chair of the ENRE (Energy, Natural Resources, and the Environment) Section of INFORMS (Institute for Operations Research and Management Sciences). I have also served as an elected member of the Subdivisions Council of INFORMS.</p> 
+         	</br>
+         	<h2><strong> Education </strong></h2>
+ 	            <ul>
+ 	            <li><strong>Ph.D. Industrial Engineering</strong></li>
+ 	            	<ul>
+ 	            	 <li>Texas A&amp;M University, College Station, TX, USA.</li>
+ 	            	</ul>
+ 	            </ul>
+ 	            <ul>
+ 	            <li><strong>M.Sc. Industrial Engineering</strong></li>
+ 	            	<ul>
+ 	            	 <li>University of South Florida, Tampa, FL, USA.</li>
+ 	            	</ul>
+ 	            </ul>
+ 	            <ul>
+ 	            <li><strong>M.E. Project Engineering</strong></li>
+ 	            	<ul>
+ 	            	 <li>Birla Institute of Technology and Science, Pilani, India.</li>
+ 	            	</ul>
+ 	            </ul>
+ 	            <ul>
+ 	            	<li><strong>B.E. Mechanical Engineering</strong></li>
+ 	            	<ul>
+ 	            		<li>National Institute of Technology, Durgapur, India.</li>
+ 	            	</ul>
+ 	            </ul>
 
-.navbar-custom .navbar-brand {
-    font-weight: 700;
-    font-size: 22px;
-}
+ 	           <h2><strong>Professional Experience</strong></h2>
+<ul>
+<li>Jan 2012-Actual
+<ul>
+<li>Chair, Department of Industrial and Management Systems Engineering, University of South Florida, Tampa, Florida.</li>
+</ul>
+</li>
+</ul>
+<ul>
+<li>Jan 2008- July 2010
+<ul>
+<li>Associate Provost, Policy Analysis, Planning, and Performance, University of South Florida, Tampa, Florida.</li>
+</ul>
+</li>
+</ul>
+<ul>
+<li>2001-Actual
+<ul>
+<li>Professor, Department of Industrial and Management System Engineering, University of South Florida, Tampa, Florida.</li>
+</ul>
+</li>
+</ul>
+<ul>
+<li>1996- 2001
+<ul>
+<li>Associate Professor, Department of Industrial and Management Systems Engineering, University of South Florida, Tampa, Florida.</li>
+</ul>
+</li>
+</ul>
+<ul>
+<li>1992- 1996
+<ul>
+<li>Assistant Professor and Graduate Program Coordinator (1994-1996), Department of Industrial and Management Systems Engineering, University of South Florida, Tampa, Florida.</li>
+</ul>
+</li>
+</ul>
+<ul>
+<li>1989-1992
+<ul>
+<li>Assistant Professor, Department of Industrial Engineering, Southern Illinois University at Edwardsville (SIUE), Illinois.</li>
+</ul>
+</li>
+</ul>
+<ul>
+<li>1986-1989
+<ul>
+<li>Research/Teaching Assistant, Department of Industrial Engineering, Texas A&amp;M University.</li>
+</ul>
+</li>
+</ul>
+<ul>
+<li>1985-1986
+<ul>
+<li>Teaching Assistant, Department of Industrial and Management Systems Engineering, University of South Florida.</li>
+</ul>
+</li>
+</ul>
+<ul>
+<li>1979-1985
+<ul>
+<li>Senior Design Engineer, Development Consultants Pvt. Ltd., Calcutta, India.</li>
+</ul>
+</li>
+</ul>
+			</article> 
+	<!-- Scroll to top -->
 
-.navbar-custom .navbar-nav > li.active a,
-.navbar-custom .nav li a:hover,
-.navbar-custom .nav li a:focus {
-    color: #49CCB8;
-}
+	<div class="scroll-up">
+		<a href="#home"><i class="fa fa-angle-up"></i></a>
+	</div>
+    
+    <!-- Scroll to top end-->
 
-/* ---------------------------------------------- */
-/* Scroll to Top
-/* ---------------------------------------------- */
-.scroll-up {
-    position: fixed;
-    display: none;
-    z-index: 999;
-    bottom: 2em;
-    right: 2em;
-}
+	<!-- Javascript files -->
 
-.scroll-up a {
-    background-color: rgba(135, 135, 135, 0.5);
-    width: 35px;
-    height: 35px;
-    text-align: center;
-    color: #fff;
-    font-size: 15px;
-    line-height: 30px;
-}
+	<script src="assets/js/jquery-1.11.1.min.js"></script>
+	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+	<script src="assets/js/jquery.parallax-1.1.3.js"></script>
+	<script src="assets/js/imagesloaded.pkgd.js"></script>
+	<script src="assets/js/jquery.sticky.js"></script>
+	<script src="assets/js/smoothscroll.js"></script>
+	<script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/jquery.easypiechart.js"></script>
+    <script src="assets/js/waypoints.min.js"></script>
+    <script src="assets/js/jquery.cbpQTRotator.js"></script>
+	<script src="assets/js/custom.js"></script>
 
-.scroll-up a:hover {
-    background-color: rgba(235, 235, 235, .8);
-    color: #e7746f;
-}
-
-/* ---------------------------------------------- */
-/* Media Queries
-/* ---------------------------------------------- */
-@media (max-width: 767px) {
-    p {
-        margin-right: 10%;
-    }
-}
-
-@media (max-width: 480px) {
-    #home {
-        background-image: url(../images/usf.jpg);
-        background-size: 100% 100%;
-        max-height: 100px;
-    }
-
-    h1 {
-        font-size: 34px;
-        letter-spacing: 3px;
-    }
-
-    h2 {
-        font-size: 24px;
-        margin-bottom: 30px;
-        letter-spacing: 3px;
-    }
-
-    p {
-        font-size: 14px;
-        margin-right: 20%;
-    }
-}
-
-/* ---------------------------------------------- */
-/* Quote Rotator
-/* ---------------------------------------------- */
-.cbp-qtrotator {
-    position: relative;
-    margin: 3em auto 0;
-    max-width: 90%;
-}
-
-.cbp-qtrotator .cbp-qtcontent {
-    position: absolute;
-    min-height: 200px;
-    border-top: 1px solid #f4f4f4;
-    border-bottom: 1px solid #f4f4f4;
-    padding: 1em 0;
-    top: 0;
-    width: 100%;
-    opacity: 0;
-    z-index: 0;
-}
-
-.cbp-qtrotator .cbp-qtcontent.cbp-qtcurrent {
-    position: relative;
-    z-index: 100;
-    opacity: 1;
-}
-
-.cbp-qtprogress {
-    position: absolute;
-    background: #FF5252;
-    height: 1px;
-    width: 0;
-    top: 0;
-    z-index: 1000;
-}
-
-.cbp-qtrotator blockquote {
-    margin: 0;
-    padding: 0;
-    font-size: 10px;
-    border: 0;
-}
-
-.cbp-qtrotator blockquote p {
-    font-size: 2em;
-    color: #888;
-    font-weight: 300;
-    margin: 0.4em 0 1em;
-}
-
-.cbp-qtrotator blockquote footer {
-    font-size: 1.2em;
-}
-
-.cbp-qtrotator blockquote footer:before {
-    content: '— ';
-}
-
-.cbp-qtrotator .cbp-qtcontent img {
-    float: right;
-    margin-left: 3em;
-}
-
-@media screen and (max-width: 30.6em) { 
-    .cbp-qtrotator {
-        font-size: 70%;
-    }
-
-    .cbp-qtrotator img {
-        width: 80px;
-    }
-}
+</body>
+</html>
